# A-General-Solution-Platform-for-CAE

./: .gitignore  README.md
cpp/src/: python_bindings.cpp
data/results/: latest_results.csv  latest_results.vtu  test_gmsh_cantilever_results.csv  test_results.csv  test_results.vtu  test_thermal_results.csv
docs/: CAE软件开发规划.md  requirements.txt  快速启动指南.md
legacy_versions/2026-03-16_iteration24_latest/: .gitignore  CMakeLists.txt
legacy_versions/2026-03-16_iteration24_latest/cpp/include/: fem_solver.h
legacy_versions/2026-03-16_iteration24_latest/cpp/src/: fem_solver.cpp
legacy_versions/2026-03-16_iteration24_latest/data/models/: latest_mesh.msh  test_mesh_order2.vtu  test_thermal_mesh.msh  thread_test_mesh.msh
legacy_versions/2026-03-16_iteration24_latest/data/results/: test_single_tet_results.csv  test_thermal_results.vtu
legacy_versions/2026-03-16_iteration24_latest/docs/: README.md  快速启动指南.md
legacy_versions/2026-03-16_iteration24_latest/python/app/: __init__.py  main_window.py
legacy_versions/2026-03-16_iteration24_latest/python/app/services/: mesh_service.py
legacy_versions/2026-03-16_iteration24_latest/python/tests/: test_gmsh_integration.py
python/app/: launcher.py  main_window.py  models.py  runtime_paths.py
python/app/services/: __init__.py  mesh_service.py  report_service.py  solver_service.py
python/tests/: test_fem_solver.py  test_gmsh_integration.py  test_main_window_regressions.py  test_report_service.py  test_thermal_integration.py
tools/: generate_user_manual_docx.py
